libsyd: implement interface to the Tao, the Book of the Way
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -54,7 +54,8 @@ libsyd_SRCS = \
 	      unshare.c \
 	      extfs.c \
 	      sha1.c \
-	      xxhash.c
+	      xxhash.c \
+	      tao.c
 
 # SHA1DC
 libsyd_SRCS+= \
