book: implement new command book, interface to the Tao, the Book of the Way
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -183,9 +183,10 @@ bin_PROGRAMS= syd
 
 # TODO: syd-run
 syd_libexecdir=$(libexecdir)/$(PACKAGE)/bin
-syd_libexec_PROGRAMS= syd-dump syd-errno syd-format syd-hash
+syd_libexec_PROGRAMS= syd-book syd-dump syd-errno syd-format syd-hash
 
 syd_CPPFLAGS= -DSYDBOX -DSYD=1
+syd_book_CPPFLAGS= -DSYDBOOK -DSYD_BOOK=1
 syd_errno_CPPFLAGS= -DSYDERR -DSYD_ERRNO=1
 syd_format_CPPFLAGS= -DSYDFMT -DSYD_FORMAT=1
 noinst_INCLUDE_SRCS= syd_seccomp_arch_default.c
@@ -309,6 +310,16 @@ syd_SOURCES+= \
 # imported from OpenBSD
 noinst_HEADERS+= \
 		 sys-queue.h
+
+syd_book_SOURCES= \
+		   syd-book.c
+syd_book_LDFLAGS=\
+		  $(CODE_COVERAGE_LDFLAGS) \
+		  $(libseccomp_LIBS)
+syd_book_LDADD=\
+		@SYDBOX_LIBTOOL_FLAGS@ \
+		$(CODE_COVERAGE_LIBS) \
+		lib/libsyd_@LIBSYD_PC_SLOT@.la
 
 syd_errno_SOURCES= \
 		   errno2name.c \
