libsyd: add /dev/sydbox IPC interface
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/lib/libsyd.ld.in
+++ b/src/lib/libsyd.ld.in
@@ -90,6 +90,33 @@ global:
 	syd_extfs_set_append_only;
 	syd_extfs_get_compression;
 	syd_extfs_set_compression;
+	syd_ipc_api;
+	syd_ipc_check;
+	syd_ipc_lock;
+	syd_ipc_exec_lock;
+	syd_ipc_use_toolong_hack;
+	syd_ipc_kill;
+	syd_ipc_kill_if_match;
+	syd_ipc_set_exec;
+	syd_ipc_set_read;
+	syd_ipc_set_write;
+	syd_ipc_set_network;
+	syd_ipc_get_exec;
+	syd_ipc_get_read;
+	syd_ipc_get_write;
+	syd_ipc_get_network;
+	syd_ipc_allow_exec;
+	syd_ipc_allow_read;
+	syd_ipc_allow_write;
+	syd_ipc_allow_network;
+	syd_ipc_deny_exec;
+	syd_ipc_deny_read;
+	syd_ipc_deny_write;
+	syd_ipc_deny_network;
+	syd_ipc_filter_exec;
+	syd_ipc_filter_read;
+	syd_ipc_filter_write;
+	syd_ipc_filter_network;
 	/* sc_map.h */
 	sc_map_dec_strkey;
 	sc_map_dec_scalar;
