--- a/src/lib/libsyd.ld.in
+++ b/src/lib/libsyd.ld.in
@@ -94,6 +94,7 @@ global:
 	syd_ipc_check;
 	syd_ipc_lock;
 	syd_ipc_exec_lock;
+	syd_ipc_exec;
 	syd_ipc_use_toolong_hack;
 	syd_ipc_kill;
 	syd_ipc_kill_if_match;
