builds,syd: more test fixes for alpine-x86-64
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/.builds/x86_64-alpine-edge.yml
+++ b/.builds/x86_64-alpine-edge.yml
@@ -60,7 +60,7 @@ tasks:
     ./src/syd --test
 - arch: |
     cd sydbox
-    ./src/syd -d2 true
+    ./src/syd -d2 -- cc --version
 - check_static: |
     cd sydbox
     make -j V=1 check && touch .check_ok
