--- a/.builds/x86_64-alpine-edge.yml
+++ b/.builds/x86_64-alpine-edge.yml
@@ -1,6 +1,6 @@
 image: alpine/edge
 arch: x86_64
-artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2 ]
+#artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2 ]
 packages:
 - linux-headers
 - libseccomp
