libsyd: add new function syd_name_to_sha1, adapt syd_name_to_xxh* functions a bit
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/lib/libsyd.ld.in
+++ b/src/lib/libsyd.ld.in
@@ -242,6 +242,7 @@ global:
 	syd_hash_to_hex;
 	syd_hash_to_hex_r;
 	syd_hex_to_bytes;
+	syd_name_to_sha1_hex;
 	syd_file_to_sha1_hex;
 	syd_path_to_sha1_hex;
 	/* xxHash */
