autotools: add new network denylist header to sources
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -230,6 +230,7 @@ noinst_HEADERS+= \
 		 xfunc.h \
 		 syd-conf.h \
 		 syd-sys.h \
+		 syd-sys-net.h \
 		 syd-box.h \
 		 syd-ipc.h
 syd_SOURCES+= \
